[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Menu Scripts/Dot.gd" type="Script" id=1]
[ext_resource path="res://Sprites/dot.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 151.154, 151.924 )

[sub_resource type="CircleShape2D" id=2]

[node name="Dot" type="RigidBody2D"]
mode = 2
contacts_reported = 10
contact_monitor = true
script = ExtResource( 1 )

[node name="dotShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 0.25 )
shape = SubResource( 1 )

[node name="Bumper" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 120, 120 )
shape = SubResource( 2 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
z_index = -1
texture = ExtResource( 2 )

[node name="ClearedShader" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.0627451, 0.85098, 0.168627, 1 )
scale = Vector2( 1.5, 1.5 )
z_index = -1
texture = ExtResource( 2 )

[node name="Select" type="Button" parent="."]
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 149.0
flat = true
[connection signal="pressed" from="Select" to="." method="_on_Select_pressed"]
